--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -26,6 +26,10 @@
     border-top: none
     padding-top: 0
 
+  &--triple
+    .text-block
+      width: 100%
+
 .text-block
   font-size: $font-size-small
   margin: 0 $common-spacing 0
@@ -193,6 +197,86 @@
           $size: 20rem
           height: $size
           width: $size
+
+
+  &__triple-text-block-container
+    $ttbc: &
+    display: flex
+    flex-direction: column
+
+    @include bp('portrait')
+      flex-direction: row
+
+    &#{$ttbc}--text-only .text-block__triple-text-block-content
+      text-align: left
+
+  &__triple-text-block
+    $border: .2rem solid $color-very-light
+    align-items: flex-start
+    border-bottom: .2rem solid $color-very-light
+    display: flex
+    flex-direction: row
+    padding: $common-spacing 0
+    width: 100%
+
+    &:first-child
+      border-top: $border
+
+      @include bp('portrait')
+        border: none
+        padding-left: 0
+
+    @include bp('portrait')
+      align-items: center
+      border-bottom: none
+      flex-direction: column
+      padding: $common-spacing
+      width: 33%
+
+    &:last-child
+      @include bp('portrait')
+        padding-right: 0
+
+    &-icon
+      width: 6.4rem
+
+      @include bp('portrait')
+        margin-bottom: $common-spacing
+        width: 10rem
+
+      @include bp('large')
+        width: 12rem
+
+    &-text-container
+      margin-left: $common-spacing
+
+      @include bp('portrait')
+        font-size: $font-size-medium
+        margin-left: 0
+        text-align: center
+
+      @include bp('large')
+        font-size: $font-size-really-very-large
+
+    &-icon-text
+      color: $color-tertiary
+      font-size: 3rem
+      font-weight: $font-weight-very-bold
+      line-height: 3.4rem
+      position: relative
+
+      @include bp('portrait')
+        font-size: 2.8rem
+        line-height: 3.4rem
+        text-align: center
+
+      @include bp('landscape')
+        font-size: 3.6rem
+        line-height: 4.4rem
+
+      @include bp('large')
+        font-size: 5.2rem
+        line-height: 6rem
 
   &__quote
     background-color: $color-tertiary
