renamed text-block__link to text__block-cta-link

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -24,6 +24,7 @@
 
   .l-full &--has-cta-link
     border-bottom: 0
+    padding-bottom: 0
 
   .page-blocks .l-full:first-child &
     border-top: none
@@ -354,7 +355,7 @@
       top: 50%
       width: 100%
 
-  &__link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
+  &__cta-link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
     background-color: $color-main
     border-bottom: .2rem solid $color-main-shadow
     border-radius: 5rem
