changed color of CTA links
added hover transition;
increased bottom border width; (+1 squashed commit)
Squashed commits:
[e81bfb9] removed old CTA link colors

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -29,8 +29,9 @@ $font-size-enormous: 4.8rem
 $font-size-gigantic: 5.6rem
 
 // colors
-$color-main: rgb(65,152,199)
-$color-main-shadow: rgb(19,138,185)
+$color-main: #0099cc
+$color-main-shadow: #0089bc
+$color-main-hover: #007197
 $color-secondary: rgb(30,147,189)
 $color-tertiary: rgb(113,11,105)
 $color-section-highlight: rgb(240,229,239)
