styling color and background color for modified .text-block-container

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -34,13 +34,14 @@ $color-main-shadow: #0089bc
 $color-main-hover: #007197
 $color-secondary: rgb(30,147,189)
 $color-tertiary: rgb(113,11,105)
-$color-section-highlight: rgb(240,229,239)
+$color-section-highlighted: rgb(240,229,239)
 $color-extremely-light: rgb(240,240,240)
 $color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-grey-medium: rgb(102,102,119)
 $color-dark: rgb(0,1,29)
+$color-dark-section: rgb(50,52,74)
 $color-body: #33334b
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
