--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -22,6 +22,13 @@
     padding-top: $common-spacing * 2
     width: 100%
 
+  .l-full &--highlighted
+    background-color: $color-section-highlighted
+
+  .l-full &--dark
+    background-color: $color-dark-section
+    color: $color-white
+
   .l-full &--has-cta-link
     border-bottom: 0
     padding-bottom: 0
