created quote component;
made text-block display flex so that the quotes can be left and right aligned within the text blocks;

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -96,6 +96,8 @@
       line-height: 4rem
 
   &__content
+    display: flex
+    flex-direction: column
     font-size: 1.6rem
     line-height: 2.2rem
 
