--- a/web/app/themes/ppj/src/sass/components/quote.sass
+++ b/web/app/themes/ppj/src/sass/components/quote.sass
@@ -1,17 +1,100 @@
 .quote
-  display: block
-  font-size: $font-size-medium
+  border-radius: $common-spacing * 2
+  border-style: solid
+  border-width: .8rem
+  font-size: $font-size-large
   font-weight: $font-weight-bold
-  margin: $common-spacing
-  quotes: "“" "”" "‘" "’"
+  padding: $common-spacing * 2 $common-spacing $common-spacing*1.5
+  margin-bottom: 1.6rem
 
-  &:before
-    color: $color-main
-    content: open-quote
+  &--left
+    align-self: flex-start
+
+  &--right
+    align-self: flex-end
+
+  &--top-left
+    border-top-left-radius: 0
+
+  &--top-right
+    border-top-right-radius: 0
+
+  &--bottom-left
+    border-bottom-left-radius: 0
+
+  &--bottom-right
+    border-bottom-right-radius: 0
+
+  &--strong
+    background-color: $color-tertiary
+    color: $color-white
+    border-color: $color-white
+
+  &--light
+    background-color: inherit
+    border-color: $color-tertiary
+    color: $color-tertiary
+
+  &--inherit
+    background-color: inherit
+    color: inherit
+
+  &--no-border
+    border-width: 0
+
+  @include bp('portrait')
+    padding: $common-spacing * 2
+    width: 60%
+
+  @include bp('large')
+    font-size: $font-size-almost-huge
+
+  &-content
+    font-size: 2rem
+    line-height: 2.6rem
+    font-weight: $font-weight-bold
+
+    @include bp('portrait')
+      font-size: 2.4rem
+      line-height: 3rem
+
+    @include bp('landscape')
+      font-size: 3rem
+      line-height: 3.8rem
+
+    @include bp('large')
+      font-size: 4rem
+      line-height: 4.8rem
+
+  &-mark
+    //@include background-img('svg/quote_icon.svg')
+    background-repeat: no-repeat
     display: block
-    font-size: 3.6rem
-    line-height: 1rem
+    height: 3rem
+    margin: 2.1rem 0 1rem
 
-  &:after
-    content: close-quote
-    visibility: hidden
+    .st0
+      fill: red
+
+
+  &-source
+    color: $color-white
+    font-family: $sans-serif
+    font-size: 1.6rem
+    line-height: 2.2rem
+    margin-top: $common-spacing
+
+    @include bp('portrait')
+      font-size: 1.8rem
+      line-height: 2.4rem
+
+    @include bp('landscape')
+      font-size: 2.4rem
+      line-height: 3.2rem
+
+    @include bp('large')
+      font-size: 2.8rem
+      line-height: 3.8rem
+
+  .st0
+    fill: red
