--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -366,8 +366,9 @@
       font-size: 2.8rem
       line-height: 3.8rem
 
-  &__link-container
+  &__cta-link-container
     display: flex
+    margin-top: $common-spacing
     position: relative
     text-align: center
 
