created double text block component

--- a/web/app/themes/ppj/src/sass/components/nav-block.sass
+++ b/web/app/themes/ppj/src/sass/components/nav-block.sass
@@ -1,7 +1,7 @@
 .nav-block
   background-color: $color-nav-block
   font-size: $font-size-small
-  margin: 0 $common-spacing $common-spacing
+  margin: $common-spacing $common-spacing
   padding: $common-spacing
   border-top-right-radius: $common-spacing
 
@@ -10,7 +10,7 @@
 
   @include bp('landscape')
     padding: $common-spacing * 2
-    margin: 0 $common-spacing * 2 $common-spacing * 2
+    margin: $common-spacing * 2 $common-spacing * 2
 
   &__title
     font-size: 2.2rem
