--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -19,8 +19,11 @@
     border-bottom: 0
     margin-left: 0
     margin-right: 0
-    padding-top: $common-spacing * 2
+    //padding-top: 0
     width: 100%
+
+    @include bp('portrait')
+      padding-top: $common-spacing * 2
 
   .l-full &--highlighted
     background-color: $color-section-highlighted
@@ -33,18 +36,21 @@
     border-bottom: 0
     padding-bottom: 0
 
-  .page-blocks .l-full:first-child &
-    border-top: none
+  .page-blocks .l-full:nth-last-child(2) &
+    border-bottom: none
 
-  .l-full &--triple
-    border-bottom: 0
+  .l-full &--multi
+    //border-bottom: 0
 
     .text-block
       width: 100%
 
 .text-block
   font-size: $font-size-small
-  margin: 0 $common-spacing 0
+  //margin: 0 $common-spacing 0
+  margin: 0
+  padding-left: $common-spacing
+  padding-right: $common-spacing
 
   @include bp('portrait')
     font-size: $font-size-medium
@@ -53,15 +59,17 @@
 
   @include bp('landscape')
     font-size: $font-size-large-medium
+    width: 91.5rem
 
   @include bp('large')
-    width: 66%
+    width: 79.2rem
 
   &__title
     @extend .common-header
     font-size: 2.2rem
     line-height: 2.6rem
     margin-bottom: .3em
+    margin-top: .3em
 
     @include bp('portrait')
       font-size: 3rem
@@ -212,19 +220,53 @@
           height: $size
           width: $size
 
+    .quote
+      @include bp('portrait')
+        padding: $common-spacing * 2
+        width: 70%
 
-  &__triple-text-block-container
+
+  &__multi-text-block-container
     $ttbc: &
+    border-bottom: 0
     display: flex
     flex-direction: column
 
     @include bp('portrait')
       flex-direction: row
 
-    &#{$ttbc}--text-only .text-block__triple-text-block-content
-      text-align: left
+    &#{$ttbc}--text-only
 
-  &__triple-text-block
+      & .text-block__multi-text-block-content
+        text-align: left
+
+    &#{$ttbc}--double
+      @include bp('portrait')
+        margin-left: $common-spacing * 2
+        margin-right: $common-spacing * 2
+
+      @include bp('large')
+        margin-left: auto
+        margin-right: auto
+        width: 85%
+
+      & .text-block__multi-text-block
+
+        @include bp('portrait')
+          width: 35%
+
+        &:first-child
+          @include bp('portrait')
+            width: 65%
+
+
+    &#{$ttbc}--triple
+      & .text-block__multi-text-block
+        @include bp('portrait')
+          //width: 33%
+          //width: 15%
+
+  &__multi-text-block
     $border: .2rem solid $color-very-light
     align-items: flex-start
     border-bottom: .2rem solid $color-very-light
@@ -245,7 +287,7 @@
       border-bottom: none
       flex-direction: column
       padding: $common-spacing
-      width: 33%
+
 
     &:last-child
       @include bp('portrait')
@@ -268,6 +310,10 @@
         font-size: $font-size-medium
         margin-left: 0
         text-align: center
+
+        .text-block__multi-text-block-container--double &
+          //text-align: left
+          width: 100%
 
       @include bp('large')
         font-size: $font-size-really-very-large
@@ -294,11 +340,18 @@
 
     &-content
       font-size: 1.6rem
-      line-height: 2.2rem
+      line-height: 1.4
+      text-align: center
 
       @include bp('portrait')
         font-size: 1.8rem
         line-height: 2.4rem
+
+      .text-block__multi-text-block-container--double &
+        width: 100%
+
+        & img
+          width: 100%
 
       @include bp('landscape')
         font-size: 2.4rem
@@ -311,75 +364,22 @@
       & a
         text-decoration: underline
 
-  &__quote
-    background-color: $color-tertiary
-    border-bottom-left-radius: $common-spacing * 2
-    border-top-left-radius: $common-spacing * 2
-    border-top-right-radius: $common-spacing * 2
-    color: $color-white
-    font-size: $font-size-large
-    padding: $common-spacing * 2 $common-spacing $common-spacing*1.5
-
-    @include bp('large')
-      font-size: $font-size-almost-huge
-
-  &__quote-content
-    font-size: 2rem
-    line-height: 2.6rem
-    font-weight: $font-weight-bold
-
-    @include bp('portrait')
-      font-size: 2.4rem
-      line-height: 3rem
-
-    @include bp('landscape')
-      font-size: 3rem
-      line-height: 3.8rem
-
-    @include bp('large')
-      font-size: 4rem
-      line-height: 4.8rem
-
-  &__quote-mark
-    @include background-img('svg/quote_icon.svg')
-    background-repeat: no-repeat
-    display: block
-    height: 3rem
-    margin: 2.1rem 0 1rem
-
-  &__quote-source
-    color: $color-white
-    font-family: $sans-serif
-    font-size: 1.6rem
-    line-height: 2.2rem
-    margin-top: $common-spacing
-
-    @include bp('portrait')
-      font-size: 1.8rem
-      line-height: 2.4rem
-
-    @include bp('landscape')
-      font-size: 2.4rem
-      line-height: 3.2rem
-
-    @include bp('large')
-      font-size: 2.8rem
-      line-height: 3.8rem
-
   &__cta-link-container
     display: flex
-    margin-top: $common-spacing
     position: relative
     text-align: center
 
-    &:before
-      background: $color-light
-      content: ' '
-      display: inline-block
-      height: .2rem
-      position: absolute
-      top: 50%
-      width: 100%
+    @include bp('portrait')
+      margin-top: $common-spacing
+
+      &:before
+        background: $color-light
+        content: ' '
+        display: inline-block
+        height: .2rem
+        position: absolute
+        top: 50%
+        width: 100%
 
   &__cta-link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
     background-color: $color-main
@@ -388,7 +388,7 @@
     box-shadow: 0 0 0 .3rem $color-white;
     color: $color-white
     display: inline-block
-    font-size: 1.8rem
+    font-size: 1.6rem
     font-weight: $font-weight-bold
     line-height: 2rem
     margin: $common-spacing auto
