increasing header for mobile for now, until we are using mobile specific images

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -12,9 +12,11 @@
 .header
   border-bottom: .4rem solid $color-very-light
   box-sizing: content-box
+  height: 20rem
   z-index: 3
 
   @include bp('portrait')
+    height: initial
     border-bottom-width: .8rem
 
   .home &
