--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -1,6 +1,7 @@
 .search
   $border: .1rem solid $color-light
   margin: 0 $common-spacing
+  margin: $common-spacing
 
   @include bp('portrait')
     text-align: center
