using dark blue for header transparency

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -42,6 +42,8 @@ $color-medium: rgb(240,240,240)
 $color-grey-medium: rgb(102,102,119)
 $color-dark: rgb(0,1,29)
 $color-dark-section: rgb(50,52,74)
+$color-transparency-dark-start: rgb(0,0,30) //#00001e
+$color-transparency-dark-end: #33334b
 $color-body: #33334b
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
