--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -37,7 +37,7 @@
     width: 100%
 
   &__site-header
-    background: linear-gradient(to bottom, rgba(0,0,0,0.7), $color-transparent)
+    background: linear-gradient(to bottom, $color-transparency-dark-start, $color-transparent)
     box-sizing: border-box
     z-index: 1
 
@@ -69,7 +69,7 @@
     width: 100%
 
     &:after
-      background: linear-gradient(60deg, rgba(0,0,0,0.7) 10%, $color-transparent 50%)
+      background: linear-gradient(60deg, $color-transparency-dark-end 10%, $color-transparent 50%)
       display: block
       content: ''
       position: absolute
