--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -40,7 +40,7 @@ $color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-grey-medium: rgb(102,102,119)
-$color-dark: rgb(0,1,29)
+$color-dark: rgb(25,25,52) //rgb(0,1,29) //#191934
 $color-dark-section: rgb(50,52,74)
 $color-transparency-dark-start: rgb(0,0,30) //#00001e
 $color-transparency-dark-end: #33334b
