--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -240,6 +240,7 @@
 
     &-text
       display: inline-block
+      text-align: center
 
     & > a
       border-bottom: 1px solid $color-white
@@ -268,14 +269,15 @@
         cursor: default
 
     &:first-child
+
+      @include bp('landscape')
+        border-left: 0
+
       & > a
         border-top: 1px solid $color-white
 
-      @include bp('landscape')
-        display: none
-
-    &:nth-child(2)
-      border-left: none
+        @include bp('landscape')
+          border-top: 0
 
     &-subtext
       font-weight: $font-weight-normal
