--- a/web/app/themes/ppj/src/sass/components/quote.sass
+++ b/web/app/themes/ppj/src/sass/components/quote.sass
@@ -49,7 +49,7 @@
   @include bp('large')
     font-size: $font-size-almost-huge
 
-  &-content
+  &__content
     font-size: 2rem
     line-height: 2.6rem
     font-weight: $font-weight-bold
@@ -66,18 +66,13 @@
       font-size: 4rem
       line-height: 4.8rem
 
-  &-mark
-    //@include background-img('svg/quote_icon.svg')
-    background-repeat: no-repeat
-    display: block
-    height: 3rem
-    margin: 2.1rem 0 1rem
+  &__mark
+    width: 2em
 
-    .st0
-      fill: red
+    path
+      fill: currentColor
 
-
-  &-source
+  &__source
     //color: $color-white
     font-family: $sans-serif
     font-size: 1.6rem
@@ -96,6 +91,3 @@
     @include bp('large')
       font-size: 2.8rem
       line-height: 3.8rem
-
-  .st0
-    fill: red
