ensuring that the top title border on the highlighted sections is color-tertiary

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -33,6 +33,9 @@
     position: relative
     top: - $border-width
 
+    .text-block__title:before
+      border-top-color: $color-tertiary
+
 
   .l-full &--dark
     background-color: $color-dark-section
