adding a white border to the portraits in the highlighted sections

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -36,6 +36,9 @@
     .text-block__title:before
       border-top-color: $color-tertiary
 
+    .portrait
+      & img
+        border-color: $color-white
 
   .l-full &--dark
     background-color: $color-dark-section
