adding a margin to the bottom of the quote blocks

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -57,6 +57,12 @@
     .text-block
       width: 100%
 
+  .quote
+    margin-bottom: $common-spacing
+
+    &:last-child
+      margin-bottom: 0
+
 .text-block
   font-size: $font-size-small
   //margin: 0 $common-spacing 0
