--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -160,6 +160,11 @@
         font-size: 3rem
         line-height: 4rem
 
+    & > h5
+      font-size: inherit
+      font-weight: $font-weight-bold
+      margin-bottom: 0
+
     & li
       margin: $common-spacing/2 0
       margin-left: 1.8rem
