making all text within the portrait section bold

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -226,6 +226,7 @@
         width: 33%
 
     p.portrait
+      font-weight: $font-weight-bold
       margin-bottom: $common-spacing
       margin-top: $common-spacing
       text-align: center
