header bottom border size now correct for all breakpoints

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -19,7 +19,14 @@
 
   @include bp('portrait')
     height: initial
+    border-bottom-width: .6rem
+
+  @include bp('landscape')
     border-bottom-width: .8rem
+
+  @include bp('large')
+    border-bottom-width: 1rem
+
 
   .home &
     @include bp('portrait')
