--- a/web/app/themes/ppj/src/sass/layout.sass
+++ b/web/app/themes/ppj/src/sass/layout.sass
@@ -6,6 +6,9 @@
   transition: opacity 1s
   width: 100%
 
+  &--footer
+    margin-top: auto
+
 .l-half
   margin: $common-spacing 0
   opacity: 0
@@ -22,6 +25,3 @@
   right: 0
   z-index: 1
 
-.l-footer
-  margin-bottom: 0
-  margin-top: $common-spacing * 2
