--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -41,6 +41,7 @@ $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-grey-medium: rgb(102,102,119)
 $color-dark: rgb(25,25,52) //rgb(0,1,29) //#191934
+$color-very-dark: rgb(0,0,30)
 $color-dark-section: rgb(51,51,75) //rgb(50,52,74)
 $color-transparency-dark-start: rgb(0,0,30) //#00001e
 $color-transparency-dark-end: #33334b
@@ -50,7 +51,7 @@ $color-white: #fff
 $color-white-transparent: rgba(255,255,255,0.9)
 $color-transparent: rgba(0,0,0,0)
 $color-nav-block: rgb(208, 234, 242)
-$color-gradient-dark: rgb(0,0,30)
+$color-gradient-dark: $color-very-dark
 $color-gradient-light: $color-dark-section
 
 $length-portrait: 768px
