changed the background color of html to black
this is when the user scrolls beyond the borders of the page you can see there is nothing beyond the border

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -12,8 +12,11 @@
 button
   background: none
 
-body, html
+body
   background-color: $color-body
+
+html
+  background-color: black
 
 .page-container
   background-color: $color-white
@@ -75,7 +78,7 @@ h1,h2,h3,h4,h5,h6,
 p
   margin: 0 0 .65em 0
 
-body
+#site-container
   margin: auto
   max-width: $length-large
 
