changed the spacing between titles and their top borders

--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -9,6 +9,7 @@
     display: block
     height: .2rem
     position: relative
+    margin-bottom: .25em
     margin-left: inherit
     margin-right: inherit
     width: 2.5em
