--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -168,7 +168,6 @@
     & li
       margin: $common-spacing/2 0
       margin-left: 1.8rem
-      padding-right: $common-spacing * 2
 
       @include bp('portrait')
         margin-left: 1.9rem
@@ -179,6 +178,10 @@
       @include bp('large')
         margin-left: 2.6rem
 
+
+    & ul, & ol
+      margin-bottom: $common-spacing
+      padding: 0 3.2rem
 
     & ol li
       list-style-type: decimal
