changed underline for 'NEXT' nav links to bottom borders

--- a/web/app/themes/ppj/src/sass/components/nav-block.sass
+++ b/web/app/themes/ppj/src/sass/components/nav-block.sass
@@ -29,10 +29,10 @@
   &__link
 
     & > a
+      border-bottom: .1rem solid
       cursor: pointer
       font-size: 1.6rem
       line-height: 3.2rem
-      text-decoration: underline
 
       @include bp('portrait')
         font-size: 1.8rem
