added a margin to the bottom of the portrait image

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -39,6 +39,7 @@
     .portrait
       & img
         border-color: $color-white
+        margin-bottom: $common-spacing
 
   .l-full &--dark
     background-color: $color-dark-section
