#238 updated header logo svg file

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -271,7 +271,7 @@
 
   &__logo
     @extend .u-wireframe-image
-    @include background-img('svg/hmpps_logo.svg')
+    @include background-img('svg/logo.svg')
     background-color: $color-transparent
     background-repeat: no-repeat
     background-position: center center
