ensuring that the map renders correctly when transition between landscape and portrait

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -241,8 +241,9 @@
 
   &__map
     display: flex
-    justify-content: center
     height: 20rem
+    justify-content: center
+    position: relative
     width: 100%
 
     @include bp('portrait')
