--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -256,24 +256,18 @@
 
   &__map-marker
     $c: &
-    $size: 1.5rem
+    $size: $common-spacing * 2
 
     cursor: pointer
     pointer-events: none
     position: absolute
 
     &-icon
-      background-color: $color-white
-      border-color: $color-dark
-      border-style: solid
-      border-width: .4rem
-      border-radius: $size
-      box-shadow: 0 0 3px 3px rgba(0,0,0,.2)
-      height: $size
-      left: $size / -2
+      content: url('/app/themes/ppj/dest/img/svg/inactive_pin.svg')
+      left: - $size / 2
       pointer-events: initial
       position: relative
-      top: $size / -2
+      top: - $size
       width: $size
 
     &-label
@@ -301,6 +295,7 @@
       z-index: 1
       #{$c}-icon
         border-color: $color-secondary
+        content: url('/app/themes/ppj/dest/img/svg/active_pin.svg')
         border-width: .6rem
 
       #{$c}-label
