temporary fix for removing the text-block separator above the accordion

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -28,6 +28,9 @@
     @include bp('portrait')
       padding-top: $common-spacing * 2
 
+  .page-id-306 .page-blocks .l-full:first-child & // TODO implement proper fix
+    border-bottom: none
+
   .l-full &--highlighted
     background-color: $color-section-highlighted
     position: relative
