header hero not displaying if header modifier is 'style-dark'

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -206,7 +206,6 @@
       #{$nmle}-text:after
         opacity: 1
 
-
       &:after
         @include bp('landscape')
           border-bottom-color: $color-light
@@ -361,3 +360,6 @@
       &__site-header
         background-color: $color-dark
         background: linear-gradient(60deg, $color-gradient-light, $color-gradient-dark)
+
+      &__hero
+        display: none
