incorporated user feedback into search page
search page is now no bigger than the screen height;
  before it there were scrollable elements (map & list) within a scrollable page, which was a bad UX

search page .page-blocks now display flex;
.search component is display flex;
changed spacing of .search component;

changed spacing of search header;

changed the job summary so that it manages it's own padding (not the parent li element);
now the selected job summary is white and all other non selected job summaries are grey;
job list is now slightly bigger for portrait - as the number of jobs div was line breaking;

map no longer square;
created separate function to deselect all map markers so the user can deselect a marker;
custom marker click callback function now sends the event as an argument to stop event propagation;
marker label text now bigger;
if a marker is selected, other markers are faded slightly unless hovering over it;

created custom zoom in/out buttons so they can be styled and also to prevent event propagation;

footer is now smaller and laid out horizontally to allow more space for the map and list;

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -1,8 +1,23 @@
 .job-summary
+  $verticalPadding: $common-spacing / 2
   font-size: $font-size-small
   line-height: 1.2
   position: relative
   text-align: left
+
+  &:before
+    background-color: $color-transparent
+    border-radius: $common-spacing
+    content: ' '
+    display: block
+    width: $common-spacing / 2
+    position: absolute
+    top: $verticalPadding
+    bottom: $verticalPadding
+
+  &__content
+    padding: $verticalPadding $common-spacing
+    position: relative
 
   &__distance
     height: 1.3em
@@ -16,13 +31,13 @@
   &__salary
     font-weight: $font-weight-bold
     position: absolute
-    right: 0
-    top: 0
+    right: $common-spacing
+    top: $verticalPadding
 
   &__link
     bottom: 2.1rem
     position: absolute
-    right: 0
+    right: $common-spacing
     text-decoration: underline
     text-transform: capitalize
 
@@ -33,15 +48,8 @@
     text-decoration: underline
 
   &--selected
+    transition: $main-transition-duration
 
     &:before
       background-color: $color-secondary
-      border-radius: $common-spacing
-      content: ' '
-      display: block
-      height: 100%
-      width: $common-spacing / 2
-      position: absolute
-      left: - $common-spacing
-      top: 0
-      bottom: 0
+
