--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -47,6 +47,7 @@ $color-transparency-dark-start: rgb(0,0,30) //#00001e
 $color-transparency-dark-end: #33334b
 $color-body: #33334b
 $color-dark-transparent: rgba(0,0,0,0.85)
+$color-medium-transparent: rgba(0,0,0,0.3)
 $color-white: #fff
 $color-white-transparent: rgba(255,255,255,0.9)
 $color-transparent: rgba(255,255,255,0)
