pointer events only enabled for the icon, not the parent marker element

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -374,6 +374,7 @@
     $size: $common-spacing * 2
 
     cursor: pointer
+    pointer-events: none
     position: absolute
     transition: opacity $main-transition-duration
 
