increased left margin of accordion element

--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -141,5 +141,5 @@
       &__list-element-title
         display: list-item
         list-style-type: decimal
-        margin-left: $common-spacing
+        margin-left: $common-spacing * 2
 
