fixed accordion element left-margin for different breakpoints

--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -141,5 +141,8 @@
       &__list-element-title
         display: list-item
         list-style-type: decimal
-        margin-left: $common-spacing * 2
+        margin-left: $common-spacing
+
+        @include bp('landscape')
+          margin-left: $common-spacing * 2
 
