correct header image now loading
forced the aspect ratio of the image container so that img the image wasn't determining its own container size
which means that img srcset would select the right image

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -67,12 +67,26 @@
     position: relative
     width: 100%
 
+  &__img-ratio
+    height: 0
+    padding-bottom: 56.25%
+
+    @include bp('portrait')
+      padding-bottom: 38.88%
+
+    .home &
+      padding-bottom: 76.25%
+
+      @include bp('portrait')
+        padding-bottom: 43.33%
+
   &__img-container
     background-color: $color-dark
     background-position: center center
     background-size: cover
-    height: 100%
-    width: 100%
+    bottom: 0
+    position: absolute
+    top: 0
 
     &:after
       background: linear-gradient(60deg, $color-transparency-dark-end 10%, $color-transparent 50%)
