Fixed linear gradient transparency issues on Safari
Safari doesn't seem to render transparent colors in linear gradients the same as Chrome does
The solution was to create two transparent colors:
a white transparency and a black transparency
and use to use the other when an issue appeared.

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -50,7 +50,8 @@ $color-dark-transparent: rgba(0,0,0,0.85)
 $color-medium-transparent: rgba(0,0,0,0.3)
 $color-white: #fff
 $color-white-transparent: rgba(255,255,255,0.9)
-$color-transparent: rgba(255,255,255,0)
+$color-transparent: rgba(0,0,0,0)
+$color-transparent2: rgba(255,255,255,0)
 $color-nav-block: rgb(208, 234, 242)
 $color-gradient-dark: $color-very-dark
 $color-gradient-light: $color-dark-section
